=========1.4.34b================
- Warning: this release is less well tested as usual
- Allow spaces around "=" in "option =" commands.
- WbWorkArounds is now true by default.
- Trying to set a non existent UCI option gives an error. 
- PG will now resign in case of an illegal engine move. 
- More code has been put in "pipex".
- info strings and unrecognized info lines are relayed to the GUI.
=========1.4.33b================
- New option: "WbWorkArounds". Currently it blocks options which contain "Draw" in their name from being sent to the GUI. Engines that have such options are Rybka and HIARCS. 
- Bugfix for ASSERT failure in bright. Now another ASSERT failure has appeared which seems to be bright's fault however. 
=========1.4.32b================
- Bugfix: the default setting for RepeatPV had become false again...
=========1.4.31b================
- Bugfix: improper handling of vararg function.
=========1.4.30b================
- Some more meaningful error messages added.
- Some buffer overflow checks added.
- Simplification of strange signal kludge in gui.c. 
- Removal of obsolete code in engine.c and gui.c. Platform specific code has been abstracted and pushed into pipex_win32.c and pipex_posix.c
- The format of the version number has changed once again. Debian was unhappy with the previous one.
=========1.4b29================
- Conversion from C++ to C (suggested by E.M.)
- More refactoring. The win32 and posix I/O now have a uniform interface (see pipex.h). 
=========1.4b28================
- Some comments added to explain the exact behaviour of some of the public functions in pipe.cpp. 
- LineInput now returns a bool which is FALSE in case of EOF. 
=========1.4b27================
- Option "ScoreWhite" : report score from white's point of view (suggested by E.M.).
- Option "KibitzInterval" : try to wait this many seconds between kibitzes (suggested by E.M.)
=========1.4b26================
- Contraction of version number.