@@ -1,13 +1,15 @@
+=========1.4.35b================
+- New WbWorkAround for silly bug in WB. Depth <=1 clears the engine output window. Why should an engine not be allowed to send info at depth one?
 =========1.4.34b================
 - Warning: this release is less well tested as usual
 - Allow spaces around "=" in "option =" commands.
-- WbWorkArounds is now true by default.
+- WbWorkArounds is now true by default. It decapitalizes Draw when this appears in engine option. 
 - Trying to set a non existent UCI option gives an error. 
 - PG will now resign in case of an illegal engine move. 
 - More code has been put in "pipex".
 - info strings and unrecognized info lines are relayed to the GUI.
 =========1.4.33b================
-- New option: "WbWorkArounds". Currently it blocks options which contain "Draw" in their name from being sent to the GUI. Engines that have such options are Rybka and HIARCS. 
+- New option: "WbWorkArounds" to work around bugs in WB. Currently it blocks options which contain "Draw" in their name from being sent to the GUI. Engines that have such options are Rybka and HIARCS. 
 - Bugfix for ASSERT failure in bright. Now another ASSERT failure has appeared which seems to be bright's fault however. 
 =========1.4.32b================
 - Bugfix: the default setting for RepeatPV had become false again...
